<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pokeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_gameFragment4"
            app:destination="@id/navigation_game" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pokeapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pokeapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.pokeapp.ui.game.GameFragment"
        android:label="GameFragment" >
        <action
            android:id="@+id/action_game_to_gameWon"
            app:destination="@id/navigation_game_won"
            app:popUpTo="@id/navigation_game"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_game_to_gameOver"
            app:destination="@id/navigation_game_over"
            app:popUpTo="@id/navigation_game"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_game_won"
        android:name="com.example.pokeapp.ui.gameWon.GameWonFragment"
        android:label="GameWonFragment" >
        <action
            android:id="@+id/action_gameWon_to_game"
            app:destination="@id/navigation_game" />
        <argument
            android:name="numQuestions"
            app:argType="integer" />
        <argument
            android:name="numCorrect"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_game_over"
        android:name="com.example.pokeapp.ui.gameOver.GameOverFragment"
        android:label="GameOverFragment" >
        <action
            android:id="@+id/action_gameOver_to_game"
            app:destination="@id/navigation_game" />
    </fragment>
</navigation>