<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LoginViewModel"
            type="com.example.pokeapp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/account_login"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7">

                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={LoginViewModel.email}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/purple_500"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:text="@tools:sample/first_names" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                app:layout_constraintWidth_percent="0.7">

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="@={LoginViewModel.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/purple_500"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:text="@tools:sample/lorem" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@color/cream"
                android:elevation="2dp"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:onClick="@{() -> LoginViewModel.validateInput()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_password"
                app:layout_constraintWidth_percent="0.7" />

            <LinearLayout
                android:id="@+id/layout_already_have_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_login"
                app:layout_constraintWidth_percent="1.0">

                <TextView
                    android:id="@+id/tv_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/already_have_an_account"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:onClick="@{() -> LoginViewModel.goToSignUp()}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>