<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SignupViewModel"
            type="com.example.pokeapp.ui.signup.SignupViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.signup.SignupFragment">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/press_start_2p"
        android:text="Create an Account"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_first_name"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toTopOf="parent"
                >

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_last_name"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
                >

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
                >

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_repeat_password"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_password"
                >

                <EditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/bt_register"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@color/yellow"
                android:elevation="2dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:onClick="@{() -> SignupViewModel.goToLogin()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_repeat_password"
                app:layout_constraintWidth_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>